Modified hardhat deployment configuration, updated testnet deployments

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The EfficiencyDAO Money Market (fork of Compound Protocol)",
   "main": "index.js",
   "scripts": {
-    "lint": "./script/lint",
+    "lint": "./scripts/lint",
     "compile": "./node_modules/.bin/hardhat compile",
     "deploy": "./node_modules/.bin/hardhat deploy",
     "test": "./node_modules/.bin/hardhat test"
@@ -13,16 +13,16 @@
   "author": "Efficiency DAO",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.3",
     "bignumber.js": "9.0.0",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
+    "ethers": "^5.6.9",
     "jest-diff": "^26.4.2",
     "jest-junit": "^11.1.0",
     "prettier": "^1.19.0",
