--- a/package.json
+++ b/package.json
@@ -7,39 +7,35 @@
     "lint": "./scripts/lint",
     "compile": "./node_modules/.bin/hardhat compile",
     "deploy": "./node_modules/.bin/hardhat deploy",
-    "test": "./node_modules/.bin/hardhat test"
+    "test": "./node_modules/.bin/hardhat test",
+    "local": "./node_modules/.bin/hardhat node"
   },
   "repository": "git@github.com:EfficiencyDAO/efficiency-protocol.git",
   "author": "Efficiency DAO",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@solidity-parser/parser": "^0.14.3",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.3",
-    "bignumber.js": "9.0.0",
+    "@types/node": "^18.0.6",
+    "bignumber.js": "9.0.2",
+    "hardhat": "^2.10.1",
+    "hardhat-deploy": "^0.11.11",
     "chai": "^4.3.6",
     "ethers": "^5.6.9",
-    "jest-diff": "^26.4.2",
-    "jest-junit": "^11.1.0",
-    "prettier": "^1.19.0",
+    "jest-diff": "^28.1.3",
+    "jest-junit": "^14.0.0",
+    "prettier": "^2.7.1",
     "solhint": "^3.3.7",
     "solparse": "^2.2.8",
-    "ts-node": "^10.8.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@solidity-parser/parser": "^0.13.2",
-    "dotenv": "^16.0.1",
-    "eth-saddle": "^0.1.25",
-    "hardhat": "^2.9.9",
-    "hardhat-deploy": "^0.11.11"
-  },
-  "resolutions": {
-    "scrypt.js": "https://registry.npmjs.org/@compound-finance/ethereumjs-wallet/-/ethereumjs-wallet-0.6.3.tgz",
-    "**/ganache-core": "github:compound-finance/ganache-core.git#jflatow/unbreak-fork"
+    "dotenv": "^16.0.1"
   }
 }
